compatibility in java 8